kogito-dmn-simple-kustomize/kogito-dmn-simple/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"kogito-dmn-simple:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"kogito-dmn-simple\")].image"}]'
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: kogito-dmn-simple
    app.kubernetes.io/component: kogito-dmn-simple
    app.kubernetes.io/instance: kogito-dmn-simple
  name: kogito-dmn-simple
  namespace: pbrown-dev
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: kogito-dmn-simple
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    spec:
      containers:
      - image: <PATCH_ME> 
        imagePullPolicy: IfNotPresent
        name: kogito-dmn-simple
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
