kogito-dmn-simple-kustomize/kogito-dmn-simple/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftNewApp
  labels:
    app: kogito-dmn-simple
    app.kubernetes.io/component: kogito-dmn-simple
    app.kubernetes.io/instance: kogito-dmn-simple
  name: kogito-dmn-simple
  namespace: pbrown-dev
spec:
  clusterIP: 172.30.139.151
  clusterIPs:
  - 172.30.139.151
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: 8080-tcp
    port: 8080
  - name: 8443-tcp
    port: 8443
  - name: 8778-tcp
    port: 8778
  selector:
    deployment: kogito-dmn-simple
