kogito-dmn-simple-kustomize/kogito-dmn-simple/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: simple-dmn-rule
    app.kubernetes.io/component: simple-dmn-rule
    app.kubernetes.io/instance: simple-dmn-rule
  name: simple-dmn-rule
  namespace: dmn-simple
spec:
  host: <OPENSHIFT_CLUSTER_URL>
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: simple-dmn-rule
    weight: 100
  wildcardPolicy: None
